<resources>
    <string name="app_name">Dev4me</string>
    <string name="alert_title">Confirmar candidatura</string>
    <string name="alert_message">Você deseja candidatar-se para essa vaga?</string>
    <string name="alert_yes">Sim</string>
    <string name="alert_no">Não</string>
    <string name="usage_terms">Termo de consentimento LGPD</string>
    <string name="usage_terms_lgpd_text">Este documento visa registrar a manifestação livre, informada e inequívoca pela qual o titular concorda com o tratamento de seus dados pessoais para finalidade específica, em conformidade com a Lei nº 13.709 – Lei Geral de Proteção de Dados Pessoais (LGPD).
Informamos que coletamos seus dados pessoais (CPF, Nome, Telefone, E-mail, Endereço) para Cupom Fiscal, Controle de vendas por clientes dentro da ferramenta, Pedidos feitos pelo Delivery, Controle de confissão de dívidas (Fiado). Os seus dados pessoais serão armazenados e preservados por um período indeterminado; os dados dos clientes são registrados no sistema e podem ser anonimizados a qualquer momento, desde que o cliente solicite.
</string>
    <string name="alert_agree">Concordo</string>
    <string name="alert_disagree">Discordo</string>
    <string name="api_error">Erro na API</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="entrar">entrar</string>
    <string name="contranate">Sou contratante.</string>
    <string name="candidato">Sou candidato.</string>
    <string name="ola">Olá :)</string>
    <string name="bem_vindo_de_volta">bem vindo de volta!</string>
    <string name="digite_para_entrar">digite o seu email e a sua senha para entrar:</string>
    <string name="criar_conta">Criar conta.</string>
    <string name="bem_vindo">seja bem vindo!</string>
    <string name="preencha_formulario_criar_conta">Preencha o formulário para criar a sua conta:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="ja_possuo_conta">já possuo uma conta.</string>
    <string name="homeIcon">feed</string>
    <string name="jobIcon">vagas</string>
    <string name="userIcon">perfil</string>
    <string name="dev4me">dev4me</string>
    <string name="Dev4me">Dev4me</string>
    <string name="filtrar_vagas">Filtrar vagas</string>
    <string name="filtrar_busca">Filtrar busca</string>
    <string name="search_by_tag">Buscar por Tags</string>
    <string name="tag_search_label">Digite uma Tag</string>
    <string name="search_by_local">Buscar por Localização</string>
    <string name="local_search_label">Digite uma Localização</string>
    <string name="checkbox_remote">Remoto</string>
    <string name="checkbox_hybrid">Híbrido</string>
    <string name="checkbox_presential">Presencial</string>
    <string name="button_search">Buscar</string>
    <string name="description_mock">Desenvolvimento de aplicações front-end com React;
Participar ativamente em soluções para os aplicativos desenvolvidos;
Utilizará boas práticas e código limpo;
Conhecimento em Design Patterns.
Participar ativamente em soluções para os aplicativos desenvolvidos;
Utilizará boas práticas e código limpo.
</string>
    <string name="activities_mock">Criar telas e ajudar em sua ideação;
Fazer diagramas para documentar códigos;
Utilizar ferramentas no Azure na AWS.
    </string>
    <string name="requirements_mock">Participar ativamente em soluções para os aplicativos desenvolvidos;
Utilizará boas práticas e código limpo;
Conhecimento em Design Patterns;
Conhecimento básico de JavaScript e Cloud.
    </string>
    <string name="description">Descrição</string>
    <string name="requirements">Requisitos</string>
    <string name="activities">Atividades</string>
    <string name="button_apply_now">Candidatar-se</string>
    <string name="button_apply_now_active">Se candidatou</string>
    <string name="person_description">-Desenvolvimento de aplicações front-end com React;
-Participar ativamente em soluções para os aplicativos desenvolvidos;
-Utilizará boas práticas e código limpo;
-Conhecimento em Design Patterns.
-Participar ativamente em soluções para os aplicativos desenvolvidos;
-Utilizará boas práticas e código limpo;
</string>
    <string name="contact">Contatar</string>
    <string name="cadastrar_vaga">Cadastrar nova vaga</string>
    <string name="titulo_vaga">Título da vaga</string>
    <string name="titulo_vaga_hint">Digite um título para a vaga</string>
    <string name="remoto">Remoto</string>
    <string name="presencial">Presencial</string>
    <string name="hibrido">Híbrido</string>
    <string name="tipo_contrato">Tipo de contrato</string>
    <string name="job_level">Level da vaga</string>
    <string name="localizacao">Localização</string>
    <string name="localizacao_hint">Digite a localização da vaga</string>
    <string name="avancar">Avançar</string>
    <string name="tags">Clique aqui para adicionar tags</string>
    <string name="faixa_salarial">Faixa salarial</string>
    <string name="salario_nao_obrigatorio">Não é obrigatório informar o salário, embora seja preferível</string>
    <string name="valor_minimo">Valor mínimo</string>
    <string name="valor_maximo">Valor máximo</string>
    <string name="breve_descricao">Breve descrição</string>
    <string name="breve_descricao_hint">Descreva a vaga de forma resumida</string>
    <string name="atividades">Atividades</string>
    <string name="atividades_hint">Descreva as principais atividades que serão exercídas na vaga, exemplo: “criar páginas web”</string>
    <string name="requisitos">Requisitos</string>
    <string name="requisitos_hint">Descreva os requisitos para a vaga</string>
    <string name="publicar_vaga">Publicar vaga</string>
    <string name="level_junior">Junior</string>
    <string name="level_pleno">Pleno</string>
    <string name="level_Senior">Senior</string>
    <string name="editar_dados">Editar dados cadastrais.</string>
    <string name="mudar_senha">Mudar senha.</string>
    <string name="minhas_candidaturas">Minhas candidaturas.</string>
    <string name="desativar_conta">Desativar conta.</string>
    <string name="sair">Sair.</string>
    <string name="minhas_vagas">Minhas vagas.</string>
    <string name="adicionar_nova_vaga">Adicionar nova vaga.</string>
    <string name="editar_senha">Editar senha</string>
    <string name="digite_senha_atual">Digite a sua senha atual</string>
    <string name="digite_senha_nova">Digite a sua nova senha</string>
    <string name="confirme_senha_nova">Confirme a sua nova senha</string>
    <string name="salvar">salvar</string>
    <string name="mudar_foto">mudar foto</string>
    <string name="nome_completo">Nome completo</string>
    <string name="nome_hint">Digite aqui o seu nome e sobrenome</string>
    <string name="idade">Idade</string>
    <string name="idade_hint">Digite aqui a sua idade</string>
    <string name="localizacao_perfil_usuario_hint">Digite aqui a sua localidade</string>
    <string name="breve_descricao_perfil_hint">Isso aparecerá no feed de contratação</string>
    <string name="carreira_experiencias">Carreiras / Experiências</string>
    <string name="carreira_experiencias_hint">Ex: Onde estudou? Onde trabalhou?</string>
    <string name="my_candidacies">Minhas Candidaturas</string>
    <string name="nome_empresa">Nome da empresa</string>
    <string name="nome_empresa_hint">Digite aqui o nome da empresa</string>
    <string name="localizacao_perfil_empresa_hint">Digite aqui a localização da empresa</string>
    <string name="descricao_empresa">Descrição da empresa</string>
    <string name="descricao_empresa_hint">Digite uma breve descrição da empresa</string>
    <string name="visao_valores_missao_empresa">Visão, valores e a missão da empresa</string>
    <string name="visao_valores_missao_empresa_hint">Digite a visão, valores e a missão da empresa</string>
    <string name="title_activity_user_candidacies">UserCandidacies</string>
    <string name="my_posted_jobs">Vagas Postadas</string>
    <string name="my_notifications">Notificações</string>
</resources>