<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroVaga"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/dev4me"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:layout_weight="3"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_person_24"
                app:tint="@color/white"
                android:layout_weight="1"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cadastrar_vaga"
            android:textColor="@color/ligheter_blue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="30dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passo_um"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="visible"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/titulo_vaga"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_vaga_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tipo_contrato"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/remoto"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/presencial"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hibrido"
                    android:layout_weight="1"
                    />
            </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/job_level"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
        <RadioGroup
            android:id="@+id/radioGroupLevel"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radio_button_level_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/level_junior"
                android:layout_weight="1"
                />
            <RadioButton
                android:id="@+id/radio_button_level_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/level_pleno"
                android:layout_weight="1"
                />
            <RadioButton
                android:id="@+id/radio_button_level_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/level_Senior"
                android:layout_weight="1"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/localizacao"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localizacao_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/avancar"
            android:backgroundTint="@color/material_on_background_disabled"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="1/3"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passo_dois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            app:icon="@drawable/ic_baseline_add_24"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >

        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/faixa_salarial"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_marginBottom="-10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/salario_nao_obrigatorio"
            android:fontFamily="@font/poppins_bold"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_minimo"
                android:layout_weight="1"
                android:paddingRight="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_maximo"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/avancar"
            android:backgroundTint="@color/material_on_background_disabled"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="2/3"
            android:textAlignment="center"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passo_tres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/breve_descricao"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" ">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="2"
                android:scrollbars="vertical"
                android:gravity="start"
                android:hint="@string/breve_descricao_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/atividades"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" ">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:gravity="start"
                android:hint="@string/atividades_hint"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="2"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/requisitos"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" ">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/requisitos_hint"
                android:inputType="textMultiLine"
                android:maxLines="20"
                android:minLines="2"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/publicar_vaga"
            android:backgroundTint="@color/ligheter_blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="3/3"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>



</LinearLayout>